--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
             
             <div class="cta-section">
                 <h2 style="margin-bottom: 2rem; color: #4ecdc4;">🚀 Hemen Başlayın!</h2>
+                <a href="https://filmxane-demo.vercel.app" class="cta-button" target="_blank">
+                    🎬 Canlı Demo'yu İzle
+                </a>
                 <a href="https://github.com/SerkanCtn/projectFilmxane" class="cta-button" target="_blank">
                     📁 GitHub'da Görüntüle
                 </a>
